--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -26,7 +26,7 @@
                     <button class="note-button"><i class="material-icons">delete</i></button>
                 </div>
 
-                <button>Add new note</button>
+                <button id="create-note-button" onclick="createNote()">Add new note</button>
             </div>
             <div class="notes-grid">
 
