--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -14,19 +14,18 @@
     <div id="main-container">
         <h1>Project Page</h1>
         <div id="main-grid">
-            <div class="notes-grid">
-                <div class="note-block">
-                    <p class="note-text">Note content</p>
-                    <button class="note-button"><i class="material-icons">edit</i></button>
-                    <button class="note-button"><i class="material-icons">delete</i></button>
-                </div>
-                <div class="note-block">
-                    <p class="note-text">Note content</p>
-                    <button class="note-button"><i class="material-icons">edit</i></button>
-                    <button class="note-button"><i class="material-icons">delete</i></button>
-                </div>
+            <div>
+                <h2>Notes</h2>
+                <div class="notes-grid">
 
-                <button id="create-note-button" onclick="createNote()">Add new note</button>
+                    <!-- Example note block <div class="note-block">
+                        <p class="note-text">Note content</p>
+                        <button class="note-button"><i class="material-icons">edit</i></button>
+                        <button class="note-button"><i class="material-icons">delete</i></button>
+                        </div> -->
+
+                    <button id="create-note-button" onclick="createNote()">Add new note</button>
+                </div>
             </div>
             <div class="notes-grid">
 
