--- a/source/index.html
+++ b/source/index.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDogs - Developer Journal</title>
+    <script src="./js/landing.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to DevDogs - Developer Journal</h1>
-        <h2>List of Projects:</h2>
-        <ul class="Project-List">
+    <h1>Welcome to DevDogs - Developer Journal</h1>
+    <h2>List of Projects:</h2>
+    <div class="container" id="project-container">
+        <ul id="Project-List">
             <li>
-                <a href="Project1.html">Project 1</a>
-                <button>Edit</button>
+                <a href="./pages/project.html?projectid=devdog">Project 1</a>
+                <!-- <button>Edit</button> -->
                 <button>Delete</button>
             </li>
             <li>
-                <a href="Project2.html">Project 2</a>
-                <button>Edit</button>
+                <a href="./pages/project.html?projectid=devdog">Project 2</a>
+                <!-- <button>Edit</button> --> 
                 <button>Delete</button>
             </li>
         </ul>
     </div>
-    <button class="add-project-button">Add New Project</button>
+    <textarea id="new-project-name"></textarea>
+    <button class="add-project-button" onClick="createProject()">Add New Project</button>
 </body>
 </html>
