added header with styling to index.html

--- a/source/index.html
+++ b/source/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>DevDogs - Developer Journal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <header>
+        <img src="./assets/images/logo-transparent.png" alt="place holder logo" width="64" height="64">
+        <span>DevDog</span>
+        <a href="./pages/project.html">Get Started</a>
+        <div></div>
+    </header>
 </body>
 </html>
