--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/index.css">
     <title>DevDogs - Developer Journal</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +15,29 @@
     <header>
         <img src="./assets/images/logo-transparent.png" alt="place holder logo" width="64" height="64">
         <span>DevDog</span>
-        <a href="./pages/project.html">Get Started</a>
+        <a href="./pages/landing.html">Get Started</a>
         <div></div>
     </header>
+
+    <main class="info">
+        <section>
+            <h2>All your work in one place</h2>
+        
+            <p>DevDog can help you...</p>
+            <ul>
+                <li>Keep track of your day-to-day work</li>
+                <li>Organize notes by project</li>
+                <li>Export your notes to share your progress</li>
+            </ul>
+        </section>
+        <img src="./assets/images/demoimage-transparent.png">
+        <section>
+            <h2>Launch straight through your browser!</h2>
+            <p>DevDog can be used directly in your browser or you can install the app below:</p>
+            <a href="">Download app</a>
+        </section>
+        <img src="./assets/images/demoimage-transparent.png">
+        
+    </main>
 </body>
 </html>
