--- a/source/index.html
+++ b/source/index.html
@@ -39,5 +39,9 @@
         <img src="./assets/images/demoimage-transparent.png">
         
     </main>
+
+    <footer>
+        <p>A project by Ctrl Alt Elite</p>
+    </footer>
 </body>
 </html>
