fixed header to stay at the top of the window and adjusted gradient

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     <header>
         <img src="./assets/images/logo-transparent.png" alt="place holder logo" width="64" height="64">
         <span>DevDog</span>
-        <a href="./pages/landing.html">Get Started</a>
+        <a href="./pages/landing.html">Launch in Browser</a>
         <div></div>
     </header>
 
