createProject() called on init

--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,6 @@
         </ul>
     </div>
     <textarea id="new-project-name"></textarea>
-    <button class="add-project-button" onClick="createProject()">Add New Project</button>
+    <button class="add-project-button" id="project-create">Add New Project</button>
 </body>
 </html>
