added alt text for placeholder images

--- a/source/index.html
+++ b/source/index.html
@@ -30,13 +30,13 @@
                 <li>Export your notes to share your progress</li>
             </ul>
         </section>
-        <img src="./assets/images/demoimage-transparent.png">
+        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         <section>
             <h2>Launch straight through your browser!</h2>
             <p>DevDog can be used directly in your browser or you can install the app below:</p>
             <a href="">Download app</a>
         </section>
-        <img src="./assets/images/demoimage-transparent.png">
+        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         
     </main>
 
