Added back button

--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -11,6 +11,7 @@
     <script src="../js/project.js" defer></script>
 
 <body>
+    <a href="./landing.html">Home</a>
     <div id="main-container">
         <h1>Project Page</h1>
         <div id="main-grid">
