--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -25,7 +25,7 @@
                         <button class="note-button"><i class="material-icons">delete</i></button>
                         </div> -->
 
-                    <button id="create-note-button" onclick="createNote()">Add new note</button>
+                    <button id="create-note-button">Add new note</button>
                 </div>
             </div>
             <div class="notes-grid">
