--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
-
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/notes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="../js/notes.js" defer></script>
