--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDogs - Developer Journal</title>
     <script src="../js/project.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <h1>Welcome to DevDogs - Developer Journal</h1>
