--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevDogs - Developer Journal</title>
     <script src="../js/project.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to DevDogs - Developer Journal</h1>
     <h2>List of Projects:</h2>
     <div class="container" id="project-container">
-        <ul id="Project-List">
-            </li>
-        </ul>
+      <ul id="Project-List"></ul>
     </div>
     <textarea id="new-project-name"></textarea>
-    <button class="add-project-button" id="project-create">Add New Project</button>
-</body>
+    <button class="add-project-button" id="project-create">
+      Add New Project
+    </button>
+  </body>
 </html>
