added headers to all pages and formatted them

--- a/source/index.html
+++ b/source/index.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
     <title>DevDogs - Developer Journal</title>
-
-
-
 </head>
 <body>
     <header>
         <img src="./assets/images/logo-transparent.png" alt="place holder logo" width="64" height="64" title="&#x1F60E">
-        <span>DevDog</span>
+        <h1>DevDog</h1>
         <a href="./pages/project.html">Launch in Browser</a>
         <div></div>
     </header>
