--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -11,9 +11,13 @@
     <script src="../js/notes.js" defer></script>
 
 <body>
-    <a href="./project.html">Home</a>
+    <header>
+        <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
+        <h1>Project</h1>
+        <div></div>
+    </header>
+    </body>
     <div id="main-container">
-        <h1>Project Page</h1>
         <div id="main-grid">
             <div>
                 <h2>Notes</h2>
