--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -6,9 +6,14 @@
     <title>DevDogs - Developer Journal</title>
     <script src="../js/project.js"></script>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <h1>Welcome to DevDogs - Developer Journal</h1>
+    <header>
+        <a href="../index.html" class="back"><i class="material-icons">home</i></a>
+        <h1>Welcome to DevDogs - Developer Journal</h1>
+        <div></div>
+    </header>
     <h2>List of Projects:</h2>
     <div class="container" id="project-container">
         <ul id="Project-List">
