Created/cleaned to incorporate tast list

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -3,7 +3,6 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
-
     <link rel="stylesheet" href="../css/notes.css" />
     <link
       rel="stylesheet"
@@ -11,7 +10,6 @@
     />
     <script src="../js/notes.js" defer></script>
   </head>
-
   <body>
     <a href="./project.html">Home</a>
     <div id="main-container">
@@ -20,16 +18,17 @@
         <div>
           <h2>Notes</h2>
           <div class="notes-grid">
-            <!-- Example note block <div class="note-block">
-                        <p class="note-text">Note content</p>
-                        <button class="note-button"><i class="material-icons">edit</i></button>
-                        <button class="note-button"><i class="material-icons">delete</i></button>
-                        </div> -->
-
             <button id="create-note-button">Add new note</button>
           </div>
         </div>
-        <div class="notes-grid"></div>
+        <div>
+          <h2>To-Do List</h2>
+          <div class="todo-grid">
+            <textarea id="new-task-name"></textarea>
+            <button id="add-task-button">Add new task</button>
+            <ul id="task-list"></ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
