changing the html outline to incorporate the tast list

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -30,6 +30,14 @@
             <button id="create-note-button">Add new note</button>
           </div>
         </div>
+        <div>
+          <h2>To-Do List</h2>
+          <div class="todo-grid">
+            <textarea id="new-task-name"></textarea>
+            <button id="add-task-button">Add new task</button>
+            <ul id="task-list"></ul>
+          </div>
+        </div>
         <div class="notes-grid"></div>
       </div>
     </div>
