--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -1,37 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/notes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="../js/notes.js" defer></script>
-  </head>
+    <script src="../js/notes.js" type="module"></script>
+</head>
+
 <body>
     <header>
         <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
         <h1>Project</h1>
         <div></div>
     </header>
-    </body>
-    <div id="main-container">
-        <div id="main-grid">
-            <div>
-                <h2>Notes</h2>
-                <div class="notes-grid">
+</body>
+<div id="main-container">
+    <div id="main-grid">
+        <div>
+            <h2>Notes</h2>
+            <div class="notes-grid">
 
-                    <!-- Example note block <div class="note-block">
+                <!-- Example note block <div class="note-block">
                         <p class="note-text">Note content</p>
                         <button class="note-button"><i class="material-icons">edit</i></button>
                         <button class="note-button"><i class="material-icons">delete</i></button>
                         </div> -->
 
-            <button id="create-note-button">Add new note</button>
-          </div>
+                <button id="create-note-button">Add new note</button>
+            </div>
         </div>
         <div class="notes-grid"></div>
-      </div>
     </div>
-  </body>
+</div>
+</body>
+
 </html>
