--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -22,5 +22,6 @@
     <button class="add-project-button" id="project-create">
       Add New Project
     </button>
+    <p id="project-name-error-message" hidden>Invalid Project name. Project names are limited to max length of 30 and can only contain letters, numbers, spaces and '-', '.', '_', '~'</p>
   </body>
 </html>
