--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevDogs - Developer Journal</title>
-    <script src="../js/project.js"></script>
+    <script src="../js/project.js" type="module"></script>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
