--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
-        <h1>Project</h1>
+        <h1 id="project-title">Project</h1>
         <div></div>
     </header>
 </body>
