made final changes or todolist and made a seperate js file

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/notes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="../js/notes.js" defer></script>
+    <script src="../js/todo.js" defer></script>
   </head>
 <body>
     <header>
@@ -33,12 +34,12 @@
         <div>
           <h2>To-Do List</h2>
           <div class="todo-grid">
-            <textarea id="new-task-name"></textarea>
+            <textarea id="new-task-name" placeholder="Enter new task"></textarea>
             <button id="add-task-button">Add new task</button>
             <ul id="task-list"></ul>
           </div>
         </div>
-        <div class="notes-grid"></div>
+
       </div>
     </div>
   </body>
