updated script type in notes.html to be module

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/notes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <script src="../js/notes.js" defer></script>
+    <script src="../js/notes.js" type="module"></script>
     <script src="../js/todo.js" defer></script>
 </head>
 <body>
