--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -18,21 +18,18 @@
     </header>
 </body>
 <div id="main-container">
-    <div id="main-grid">
-        <div>
-            <h2>Notes</h2>
-            <div class="notes-grid">
+    <section id="note-add">
+        <h2>Notes</h2>
+        <button id="create-note-button">Add new note</button>
+    </section>
+    
 
-                <!-- Example note block <div class="note-block">
-                        <p class="note-text">Note content</p>
-                        <button class="note-button"><i class="material-icons">edit</i></button>
-                        <button class="note-button"><i class="material-icons">delete</i></button>
-                        </div> -->
-
-                <button id="create-note-button">Add new note</button>
-            </div>
-        </div>
-        <div class="notes-grid"></div>
+    <div class="notes-grid">
+        <!-- Example note block <div class="note-block">
+                <p class="note-text">Note content</p>
+                <button class="note-button"><i class="material-icons">edit</i></button>
+                <button class="note-button"><i class="material-icons">delete</i></button>
+                </div> -->
     </div>
 </div>
 </body>
