Added sort notes button
When loading a project, notes are sorted by most recently created, when sort notes button clicked, switches to least recent note created.

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -21,6 +21,7 @@
     <section id="note-add">
         <h2>Notes</h2>
         <button id="create-note-button">Add new note</button>
+        <button id ="sort-notes-button">Sort by date</button>
     </section>
     
 
