added comments to todo.js, added puppeeteer tests

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/notes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="../js/notes.js" defer></script>
-    <script src="../js/todo.js" defer></script>
+    <script src="../js/notes.js" type="module" defer></script>
+    <script src="../js/todo.js" type="module" defer></script>
   </head>
 <body>
     <header>
