updated styling with new color palette (earthy tones - green/browns), some css for project page, and possible logo

--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevDogs - Developer Journal</title>
+    <title>DevDog - Developer Journal</title>
     <script src="../js/project.js" type="module"></script>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/project.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <header>
         <a href="../index.html" class="back"><i class="material-icons">home</i></a>
-        <h1>Welcome to DevDogs - Developer Journal</h1>
+        <h1>Projects</h1>
         <div></div>
     </header>
     <h2>List of Projects:</h2>
