--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -1,46 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/notes.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/notes.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script src="../js/notes.js" type="module" defer></script>
     <script src="../js/todo.js" type="module" defer></script>
-  </head>
+</head>
+
 <body>
     <header>
         <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
         <h1 id="project-title">Project</h1>
         <div></div>
     </header>
-</body>
-<div id="main-container">
     <section id="note-add">
-        <h2>Notes</h2>
-        <button id="create-note-button">Add new note</button>
-        <button id ="sort-notes-button">Sort by date</button>
+        <h2 id="notes-header">
+            Notes
+            <button id="create-note-button">Add new note</button>
+            <button id="sort-notes-button">Sort by date</button>
+        </h2>
+        <h2 id="todo-header">
+            To-do
+        </h2>
     </section>
-    
-    <div class="notes-grid">
-        <!-- Example note block <div class="note-block">
-                <p class="note-text">Note content</p>
-                <button class="note-button"><i class="material-icons">edit</i></button>
-                <button class="note-button"><i class="material-icons">delete</i></button>
-                </div> -->
+    <div id="main-container">
 
-    </div>
-    <div>
-      <h2>To-Do List</h2>
-        <div class="todo-grid">
-          <textarea id="new-task-name" placeholder="Enter new task"></textarea>
-          <button id="add-task-button">Add new task</button>
-          <ul id="task-list"></ul>
+
+        <div class="notes-grid">
+            <!-- <div id="mockup-project#notes#884" class="note-block">
+                <h3 class="note-header">
+                    <input type="textbox" class="note-text" value="Note 1"></p>
+                    <i class="note-date">5/26/2024 10:47:40 AM</i>
+                </h3>
+                <textarea class="edit-note">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Nam vehicula, ligula non bibendum vehicula, turpis turpis
+                    cursus urna, vitae sollicitudin turpis mi vel ex. Curabitur
+                    auctor sit amet justo vel blandit. Integer sit amet diam eu
+                    turpis elementum aliquet. Duis hendrerit, odio et bibendum tempus,
+                    urna sapien accumsan turpis, a egestas dolor ligula non eros.
+                    Suspendisse potenti. Aenean ut aliquet nunc. Nulla non felis ut
+                    libero sodales tempor. Cras fermentum lorem sed sapien elementum,
+                    id varius sem sagittis. Vestibulum feugiat dui quis suscipit
+                    interdum.
+                </textarea>
+                <details class="note-entry" style="display: none;">
+                    <summary>Expand</summary>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nam vehicula, ligula non bibendum vehicula, turpis turpis
+                        cursus urna, vitae sollicitudin turpis mi vel ex. Curabitur
+                        auctor sit amet justo vel blandit. Integer sit amet diam eu
+                        turpis elementum aliquet. Duis hendrerit, odio et bibendum tempus,
+                        urna sapien accumsan turpis, a egestas dolor ligula non eros.
+                        Suspendisse potenti. Aenean ut aliquet nunc. Nulla non felis ut
+                        libero sodales tempor. Cras fermentum lorem sed sapien elementum,
+                        id varius sem sagittis. Vestibulum feugiat dui quis suscipit
+                        interdum.
+
+
+                    </p>
+                </details>
+
+                <div class="button-container">
+                    <button class="note-button edit">
+                        <i class="material-icons">check</i>
+                    </button>
+                    <button class="note-button delete">
+                        <i class="material-icons">delete</i>
+                    </button>
+                </div>
+
+            </div> -->
+        </div>
+        <div id="todo-list">
+            <div class="todo-grid">
+                <input type="textbox" id="new-task-name" placeholder="Enter new task"></textarea>
+                <button id="add-task-button">Add new task</button>
+                <section>
+                    <ul id="task-list">
+                        <li class="task-item">
+                            <input type="checkbox" />
+                            <span>task 1</span>
+                            <button>
+                                <i class="material-icons">delete</i>
+                            </button>
+                        </li>
+                        <li class="task-item">
+                            <input type="checkbox" />
+                            <span>task 2</span>
+                            <button>
+                                <i class="material-icons">delete</i>
+                            </button>
+                        </li>
+                        <li class="task-item">
+                            <input type="checkbox" />
+                            <span>task 3</span>
+                            <button>
+                                <i class="material-icons">delete</i>
+                            </button>
+                        </li>
+                    </ul>
+                </section>
+                <button id="add-to-notes">Add completed tasks to notes</button>
+            </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
