--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/project.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<body>
+  <body>
     <header>
         <a href="../index.html" class="back"><i class="material-icons">home</i></a>
         <h1>Projects</h1>
@@ -17,12 +17,13 @@
     </header>
     <h2>List of Projects:</h2>
     <div class="container" id="project-container">
-      <ul id="Project-List"></ul>
+      <ul id="Project-List">
+        <li id="add-a-project">
+          <input type="textbox" id="new-project-name">
+          <button class="add-project-button" id="project-create">Add New Project</button>
+        </li>
+      </ul>
     </div>
-    <textarea id="new-project-name"></textarea>
-    <button class="add-project-button" id="project-create">
-      Add New Project
-    </button>
     <p id="project-name-error-message" hidden>Invalid Project name. Project names are limited to max length of 30 and can only contain letters, numbers, spaces and '-', '.', '_', '~'</p>
   </body>
 </html>
