--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -6,6 +6,7 @@
     <title>Project Page</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/notes.css" />
+    <link rel="stylesheet" href="../css/todo.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script src="../js/notes.js" type="module" defer></script>
     <script src="../js/todo.js" type="module" defer></script>
