set up pwa, trying out service worker

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
+    <link rel="manifest" href="../manifest.json" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/notes.css" />
     <link rel="stylesheet" href="../css/todo.css" />
