error in toggle button functionality

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -78,9 +78,11 @@
             </div> -->
         </div>
         <div id="todo-list">
+            
             <div class="todo-grid">
                 <input type="textbox" id="new-task-name" placeholder="Enter new task"></textarea>
                 <button id="add-task-button">Add new task</button>
+                <button id="toggle-sidebar-button">Toggle To-do</button>
                 <section>
                     <ul id="task-list">
                         <li class="task-item">
