--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -88,27 +88,13 @@
                 
                 <section>
                     <ul id="task-list">
-                        <li class="task-item">
+                        <!-- <li class="task-item">
                             <input type="checkbox" />
                             <span>task 1</span>
                             <button>
                                 <i class="material-icons">delete</i>
                             </button>
-                        </li>
-                        <li class="task-item">
-                            <input type="checkbox" />
-                            <span>task 2</span>
-                            <button>
-                                <i class="material-icons">delete</i>
-                            </button>
-                        </li>
-                        <li class="task-item">
-                            <input type="checkbox" />
-                            <span>task 3</span>
-                            <button>
-                                <i class="material-icons">delete</i>
-                            </button>
-                        </li>
+                        </li> -->
                     </ul>
                 </section>
                 <button id="add-to-notes">Add completed tasks to notes</button>
