--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -24,6 +24,11 @@
           <button class="add-project-button" id="project-create">Add New Project</button>
           <p id="project-name-error-message" hidden>Invalid Project name. Project names are limited to max length of 30 and can only contain letters, numbers, spaces and '-', '.', '_', '~'</p>
         </li>
+        <noscript>
+            <li>
+              <p>JavaScript is disabled in your browser. Some features of this site may not work as intended.</p>
+            </li>
+          </noscript>
       </ul>
     </div>
   </body>
