moved toggle button

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -24,6 +24,7 @@
             <button id="sort-notes-button">Sort by date</button>
         </h2>
         <h2 id="todo-header">
+            <button id="toggle-sidebar-button"><i class="material-icons">chevron_left</i></button>
             To-do
         </h2>
     </section>
@@ -77,12 +78,14 @@
 
             </div> -->
         </div>
+ 
         <div id="todo-list">
             
             <div class="todo-grid">
+
                 <input type="textbox" id="new-task-name" placeholder="Enter new task"></textarea>
                 <button id="add-task-button">Add new task</button>
-                <button id="toggle-sidebar-button">Toggle To-do</button>
+                
                 <section>
                     <ul id="task-list">
                         <li class="task-item">
