made sidebar collapsible

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -25,7 +25,7 @@
         </h2>
         <h2 id="todo-header">
             <button id="toggle-sidebar-button"><i class="material-icons">chevron_left</i></button>
-            To-do
+            <p>To-do</p>
         </h2>
     </section>
     <div id="main-container">
@@ -79,7 +79,7 @@
             </div> -->
         </div>
  
-        <div id="todo-list">
+        <div id="todo-list" class="closed">
             
             <div class="todo-grid">
 
