--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -16,7 +16,7 @@
     <header>
         <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
         <h1 id="project-title">Project</h1>
-        <div></div>
+        <button id="toggle-date-view">Date view</a>
     </header>
     <section id="note-add">
         <h2 id="notes-header">
