Added link to date view from project.html, made date picker font size bigger

--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -13,6 +13,7 @@
     <header>
         <a href="../index.html" class="back"><i class="material-icons">home</i></a>
         <h1>Projects</h1>
+        <a href="./notes.html?date=t" id="date-view">View Notes by Date</a>
         <div></div>
     </header>
     <h2>List of Projects:</h2>
