added list of tags to notes

--- a/specs/mockup/phase3/notes-mockup.html
+++ b/specs/mockup/phase3/notes-mockup.html
@@ -52,7 +52,7 @@
         </h3>
         <p class="note-content note-text collapsed">Put the contents of your note here!</p>
         <div class="note-bottom">
-          <ul class="label-list">
+          <ul name="tag-list" class="label-list">
             <li class="label-item">label 1</li>
             <li class="label-item">label 2</li>
             <li class="label-item">label 3</li>
