--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -27,7 +27,7 @@
         </h2>
 
         <h2 id="todo-header">
-            To-do
+            To-do test 3
         </h2>
 
         <div class="notes-grid">
