added tag list and filter classes for filtering

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -24,10 +24,13 @@
             Notes
             <button id="create-note-button">Add new note</button>
             <button id="sort-notes-button">Sort by date</button>
+            <select id="filter-select">
+                <option>No Filter</option>
+            </select>
         </h2>
 
         <h2 id="todo-header">
-            To-do test 3
+            To-do
         </h2>
 
         <div class="notes-grid">
