--- a/source/index.html
+++ b/source/index.html
@@ -14,17 +14,29 @@
         <a href="./pages/project.html">Launch in Browser</a>
     </header>
 
+    <section class="image-container">
+        <img class="paw-print" src="./assets/images/paw-print0.svg" />
+        <div class="ellipse-2"></div>
+        <div class="ellipse-5"></div>
+        <div class="ellipse-3"></div>
+        <div class="ellipse-4"></div>
+        <div class="dev-dog-can-help-you">
+            DevDog can
+            <br />
+            help you...
+        </div>
+    </section>
+
     <main class="info">
-        <section>
+        <!-- <section>
             <h2>All your work in one place</h2>
-        
-            <p>DevDog can help you...</p>
+            <h2>DevDog can help you...</h2>
             <ul>
                 <li>Keep track of your day-to-day work</li>
                 <li>Organize notes by project</li>
                 <li>Export your notes to share your progress</li>
             </ul>
-        </section>
+        </section> -->
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         <section>
             <h2>Launch straight through your browser!</h2>
