added filtering for notes

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script src="../js/notes.js" type="module" defer></script>
     <script src="../js/todo.js" type="module" defer></script>
+    <style id="filter-style"></style>
 </head>
 
 <body>
