--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -18,7 +18,7 @@
     <header>
         <a href="./project.html" class="back"><i class="material-icons">arrow_back</i></a>
         <h1 id="project-title">Project</h1>
-        <button id="toggle-date-view">Date view</button>
+        <button id="toggle-date-view">Date View</button>
     </header>
     <div id="main-container">
         <h2 id="notes-header">
