handle long word titles, remove max-height animation

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -23,8 +23,10 @@
     <div id="main-container">
         <h2 id="notes-header">
             Notes
-            <button id="create-note-button">Add new note</button>
-            <button id="sort-notes-button">Sort by date</button>
+            <div id="notes-header-buttons">
+                <button id="create-note-button">Add new note</button>
+                <button id="sort-notes-button">Sort by date</button>
+            </div>
             <select id="filter-select">
                 <option>No Filter</option>
             </select>
@@ -82,7 +84,7 @@
             </div> -->
         </div>
         <div id="todo-list">
-            
+
             <div class="todo-grid">
                 <input type="textbox" id="new-task-name" placeholder="Enter new task"></textarea>
                 <button id="add-task-button">Add new task</button>
