--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -80,6 +80,13 @@
         </div>
         <div id="todo-list">
             <div class="todo-grid">
+                <div id="progress-container">
+                    <div id="progress-bar">
+                        <div id="dog">
+                            <img src="../assets/images/puppy.png" alt="Dog">
+                        </div>
+                    </div>
+                </div>
                 <input type="textbox" id="new-task-name" placeholder="Enter new task"></textarea>
                 <button id="add-task-button">Add new task</button>
                 <section>
