fixed collapsable todo list

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -20,8 +20,8 @@
         <h1 id="project-title">Project</h1>
         <button id="toggle-date-view">Date View</button>
     </header>
-    <div id="main-container">
-        <h2 id="notes-header">
+    <div id="header-container">
+    <h2 id="notes-header">
             Notes
             <div id="notes-header-buttons">
                 <button id="create-note-button">Add new note</button>
@@ -36,6 +36,9 @@
             <button id="toggle-sidebar-button"><i class="material-icons">chevron_left</i></button>
             <p>To-do</p>
         </h2>
+    </div>
+    <div id="main-container">
+        
 
         <div class="notes-grid">
             <!-- <div id="mockup-project#notes#884" class="note-block">
