pushed new feature

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -89,6 +89,11 @@
         </div>
  
         <div id="todo-list" class="closed">
+            <div id="progress-container">
+                <div id="progress-bar">
+                    <img id="dog" src="../assets/images/puppy.png" alt="Dog">
+                </div>
+            </div>
             
             <div class="todo-grid">
 
