Hides install button on unsupported browsers

--- a/source/index.html
+++ b/source/index.html
@@ -40,10 +40,10 @@
             </ul>
         </section> -->
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
-        <section>
+        <section id="install-section">
             <h2>Launch straight through your browser!</h2>
             <p>DevDog can be used directly in your browser or you can install the app below:</p>
-            <button id="pwa-install-button">Download app</button>
+            <button id="install-button">Download app</button>
         </section>
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         
