Hides install button after successful install

--- a/source/index.html
+++ b/source/index.html
@@ -40,10 +40,10 @@
             </ul>
         </section> -->
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
-        <section id="install-section">
+        <section>
             <h2>Launch straight through your browser!</h2>
-            <p>DevDog can be used directly in your browser or you can install the app below:</p>
-            <button id="install-button">Download app</button>
+            <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:</p>
+            <button id="install-button" hidden>Download app</button>
         </section>
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         
