Linked favicon to all pages

--- a/source/pages/notes.html
+++ b/source/pages/notes.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/notes.css" />
     <link rel="stylesheet" href="../css/todo.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
     <script src="../js/notes.js" type="module" defer></script>
     <script src="../js/todo.js" type="module" defer></script>
     <style id="filter-style"></style>
