--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <title>DevDogs - Developer Journal</title>
 </head>
 <body>
