--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <title>DevDogs - Developer Journal</title>
     <script src="./js/pwa-install.js" type="module" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
 </head>
+
 <body>
     <header>
         <img src="./assets/images/possible-logo.png" alt="place holder logo" width="64" height="64" title="&#x1F60E">
@@ -43,15 +46,17 @@
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         <section>
             <h2>Launch straight through your browser!</h2>
-            <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:</p>
+            <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:
+            </p>
             <button id="install-button" hidden>Download app</button>
         </section>
         <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
-        
+
     </main>
 
     <footer>
         <p>A project by Ctrl Alt Elite</p>
     </footer>
 </body>
+
 </html>
