--- a/source/pages/project.html
+++ b/source/pages/project.html
@@ -16,7 +16,7 @@
     <header>
         <a href="../index.html" class="back"><i class="material-icons">home</i></a>
         <h1>Projects</h1>
-        <a href="./notes.html?date=t" id="date-view">View Notes by Date</a>
+        <button href="./notes.html" id="date-view">View Notes by Date</button>
         <div></div>
     </header>
     <h2>List of Projects:</h2>
