removed dead code and updated docs

--- a/source/index.html
+++ b/source/index.html
@@ -29,29 +29,19 @@
         <div class="dev-dog-can-help-you">
             DevDog can
             <br />
-            help you...
+            help you
+            <br>
+            organize
         </div>
     </section>
 
     <main class="info">
-        <!-- <section>
-            <h2>All your work in one place</h2>
-            <h2>DevDog can help you...</h2>
-            <ul>
-                <li>Keep track of your day-to-day work</li>
-                <li>Organize notes by project</li>
-                <li>Export your notes to share your progress</li>
-            </ul>
-        </section> -->
-        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
         <section>
             <h2>Launch straight through your browser!</h2>
             <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:
             </p>
             <button id="install-button" hidden>Download app</button>
         </section>
-        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
-
     </main>
 
     <footer>
