--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="./assets/images/possible-logo.png" alt="place holder logo" width="64" height="64" title="&#x1F60E">
+        <img src="./assets/images/final-logo.png" alt="place holder logo" width="80" height="80" title="&#x1F60E">
         <h1>DevDog</h1>
         <a href="./pages/project.html">Launch in Browser</a>
     </header>
@@ -34,24 +34,17 @@
     </section>
 
     <main class="info">
-        <!-- <section>
-            <h2>All your work in one place</h2>
-            <h2>DevDog can help you...</h2>
-            <ul>
-                <li>Keep track of your day-to-day work</li>
-                <li>Organize notes by project</li>
-                <li>Export your notes to share your progress</li>
-            </ul>
-        </section> -->
-        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
-        <section>
-            <h2>Launch straight through your browser!</h2>
-            <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:
-            </p>
-            <button id="install-button" hidden>Download app</button>
-        </section>
-        <img src="./assets/images/demoimage-transparent.png" alt="placeholder images">
+       <section class="demo-container">
+            <h2>Keep track of your day-to-day work</h2>
+            <img src="./assets/images/project-page-demo.png" alt="project page" width="720" height="360" >
+            <h2>Organize your notes by projects</h2>
+            <img src="./assets/images/notes-demo.png" alt="notes page within project" width="720" height="360"><h2>Create tasks through an organized to-do list</h2>
+            <img src="./assets/images/to-do.png" alt="to-do list" width="360" height="500">
+       </section>
 
+        <section class="launch">
+            <h2>Launch straight through your browser now!</h2>
+        </section>
     </main>
 
     <footer>
