Re added install button to front page

--- a/source/index.html
+++ b/source/index.html
@@ -44,6 +44,11 @@
 
         <section class="launch">
             <h2>Launch straight through your browser now!</h2>
+            <div class="install-section">
+                <p id="install-text" hidden>Or you can install the app here:</p>
+                <button id="install-button" hidden>Download app</button>
+            </div>
+            
         </section>
     </main>
 
