fixed merge conflict restyled download button

--- a/source/index.html
+++ b/source/index.html
@@ -45,11 +45,7 @@
        </section>
 
         <section class="launch">
-            <h2>Launch straight through your browser now!</h2>
-        <section>
-            <h2>Launch straight through your browser!</h2>
-            <p id="install-text" hidden>DevDog can be used directly in your browser or you can install the app below:
-            </p>
+            <h2>Download the app now!</h2>
             <button id="install-button" hidden>Download app</button>
         </section>
     </main>
